tdf#115100: fix assertions in svdglue.hxx

See bt:
https://bugs.documentfoundation.org/attachment.cgi?id=139225

See comments
https://bugs.documentfoundation.org/show_bug.cgi?id=115100#c2
https://bugs.documentfoundation.org/show_bug.cgi?id=115100#c3

Change-Id: I21266bdd809d3e13ca403ec46e51e9aa86487bb9